Improved 3D graphics support.